2013-02-05  Benjamin Poulain  <bpoulain@apple.com>

        Make StringBuilder::toAtomicString() consistent with StringBuilder::toString() for strings of length zero
        https://bugs.webkit.org/show_bug.cgi?id=108894

        Reviewed by Andreas Kling.

        * wtf/text/StringBuilder.h:
        (WTF::StringBuilder::toAtomicString): The function was returning the nullAtom for strings of length zero.
        This is inconsistent with StringBuilder::toString() which always return an empty string.

        This patch unifies the behavior.

2013-02-04  Mark Hahnenberg  <mhahnenberg@apple.com>

        Structure::m_outOfLineCapacity is unnecessary
        https://bugs.webkit.org/show_bug.cgi?id=108206

        Reviewed by Darin Adler.

        Simplifying the utility functions that we use since we don't need a 
        bunch of fancy templates for this one specific call site.

        * wtf/MathExtras.h:
        (WTF::roundUpToPowerOfTwo):

2013-02-05  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r141905.
        http://trac.webkit.org/changeset/141905
        https://bugs.webkit.org/show_bug.cgi?id=108963

        "Broke mac build" (Requested by tonyg-cr on #webkit).

        * wtf/text/CString.cpp:
        * wtf/text/CString.h:
        * wtf/text/WTFString.cpp:
        * wtf/text/WTFString.h:
        (String):
        * wtf/url/api/ParsedURL.h:
        (ParsedURL):
        * wtf/url/api/URLString.h:

2013-02-05  Tony Gentilcore  <tonyg@chromium.org>

        Call XSSAuditor's didBlockScript() for the threaded HTML parser
        https://bugs.webkit.org/show_bug.cgi?id=108726

        Reviewed by Adam Barth.

        This patch adds isSafeToSendToAnotherThread() methods to CString, String, ParsedURL and URLString.
        These methods check to ensure there are 0 or 1 references.

        * wtf/text/CString.cpp:
        (WTF::CString::isSafeToSendToAnotherThread): Added.
        (WTF):
        * wtf/text/CString.h:
        (CString):